# GrandFEP

./: .buildinfo  .buildinfo.bak  .gitignore  Developmental_LOG.md  LICENSE  README.md  commandline.html  devlog.html  env.yml  env_extend.yml  genindex.html  index.html  intro.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  sampler.html  search.html  searchindex.js  setup.py  utils.html
Script/: README.md  color_map_pairs.py  csv_emit.py  dcd_2_xtc.py  fit_and_center.py  hybrid.py  lambda_opt_1step.py  pair_2_yml.py  remove_ghost.py  run_GC_RE.py  run_GC_prep_box.py  run_NPT_RE.py  run_NPT_init.py  run_NPT_waterMC_RE.py
Script/analysis/: MBAR.py  check_RE.sh
_sources/: devlog.md.txt  devlog.rst.txt  index.rst.txt  intro.rst.txt  modules.rst.txt  sampler.rst.txt  utils.rst.txt
_sources/sampler/: BaseGrandCanonicalMonteCarloSampler.rst.txt  NPTSampler.rst.txt  NPTSamplerMPI.rst.txt  NoneqGrandCanonicalMonteCarloSampler.rst.txt  NoneqNPTWaterMCSampler.rst.txt  grandfep.BaseGrandCanonicalMonteCarloSampler.rst.txt
_sources/tutorial/: tutorial.rst.txt  (+2 more)
_static/: alabaster.css
docs/: commandline.rst  conf.py  index.rst  intro.rst  modules.rst  sampler.rst  utils.rst
grandfep/: __init__.py  _version.py  relative.py  utils.py
sampler/: BaseGrandCanonicalMonteCarloSampler.html  BaseNPTWaterMCSampler.html  NPTSampler.html  NPTSamplerMPI.html  NoneqGrandCanonicalMonteCarloSampler.html  NoneqGrandCanonicalMonteCarloSamplerMPI.html  NoneqNPTWaterMCSampler.html  NoneqNPTWaterMCSamplerMPI.html  grandfep.BaseGrandCanonicalMonteCarloSampler.html
test/: test_GC_MPI_global.py  test_GC_customise.py  test_NPT.py  test_NPT_MPI.py  test_NPT_MPI_global.py  test_NoneqSampler.py  test_NoneqSampler_IO.py  test_TerminalFlipMC.py  test_utils.py
tutorial/: 1-hsp90-tutorial.html  2-StandardV-Chemical-Potential.html  tutorial.html
(+311 files in other folders)
