[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grandfep"
description = "GCMC/MD with free energy perturbation"
authors = [
  { name = "Chenggong Hui", email = "chenggong.hui@mpinat.mpg.de" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dynamic = ["version"]          # <- setuptools_scm will fill this field

dependencies = [
  'numpy <2.3',       # parmed Issue #1386
  'scipy',
  'pandas',
  'openmm',
  'openmmtools',
  'pymbar >=4, <5',   # conda: pymbar-core
  'mpi4py',
  'parmed',
  'mdtraj',
  'mdanalysis',
]

[project.optional-dependencies]
dev = [
  'ipykernel',
  'ipywidgets',
  'matplotlib',
  'pytest-mpi',
  'ghp-import',
  'rdkit',
  'sphinx',
  'sphinx-autodoc-typehints',
  'sphinx-mdinclude',
  'myst-parser',
  # ambertools: install via conda (not on PyPI)
]

[tool.setuptools]
packages = ["grandfep", "grandfep.sampler"]

[tool.setuptools.dynamic]
version = { attr = "grandfep._version.__version__" }
